* Fix a small problem with debugging
* Do a write lock in radacct before truncating it in truncate_radacct
* In user_new show a select box with all the available groups. Based on an idea by Karel Stadler (kstadler)
* Add a column Admin in the badusers table which will contain the administrator username if that is available
Ver 1.61:
* Add a string encoder for greek
* If general_decode_normal_attributes is set then encode attributes in lib/ldap/change_info. In the near future
  language specific user attributes will be added in the change info and new user pages. Remove comments from
  admin.conf about the change info page not working if this directive is used.
* When spliting cn in lib/ldap/create_user.php3 limit the split to 2 new elements not 3.
* Fix a few bugs in log_badlogins
* Fix a parse error in failed_logins.php3
* Fix a bug in lib/defaults.php3 which did not allow the default.vals file to be used correctly
* Include password.php3 in lib/ldap/password_check.php3
* When searching a user in ldap through the find page only try to find the users which have a uid attribute (username)
* Allow selecting a specific access server in the failed logins page
* In the user admin page use AcctStartTime not AcctStopTime when calculating usage for the last 7 days
* Also show server:port in the user test page (so that it shows when used for server checks)
* Now the create user page should work with sql
* Make the default general_lib_type sql instead of ldap
Ver 1.60:
* Use require_once when including lib/functions.php3 in lib/sql
* In the buttons toolbar Edit User should not be clickable.
* Add an arrow gif in htdocs/images to be used in the buttons page when adding multiple finger pages
* In snmpfinger also consider '-' as a valid character for a username
* Add support for realm in username and allow for realm striping in the web pages and in log_badlogins
* Add a few more comments in the admin.conf